html frontend: monthly bill can now list sums for individual users based on who is calling which number (relations are defined in user_contacts table) html frontend: cost check for monthly bills added to have a basic check for plausibility of calculated sums html frontend: created printer friendly css-based printview for monthly bills (without header and in small font) html frontend: new menu contacts added that lists known users and contacts html frontend: new display mode was added to function getMonthlyReport() to make it possible to display a table column for each individual user in the monthly bill (this may result in wide tables with many columns if you have many users, therefore it can be turned of) class.callImportManager.php: bugfix: billed call duration field was not accurately set by feature "autobill flatrate providers" (minutes were not converted into seconds, value too small) class.callImportManager.php: new method populateContacts in helps to create a contacts list in contacts table from existing data class.callImportManager.php: rows in contacts list with empty identity field are updated by imported fritzbox calls from call protocol class.installHelpers.php: added 2 new database table definitions (users and user_contacts)

--- a/htdocs/themes/standard/styles.css
+++ b/htdocs/themes/standard/styles.css
@@ -59,10 +59,12 @@
 		
 		td.right {
 			text-align: right;
+			white-space: nowrap;
 		}
 		
 		td.error{
 			background-color: pink;
+			white-space: nowrap;
 		}
 		td.correct{
 			background-color: lightgreen;
